--- a/ZrnBot/ZrnBot.csproj
+++ b/ZrnBot/ZrnBot.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppData.cs" />
     <Compile Include="Bot.cs" />
     <Compile Include="Channel.cs" />
     <Compile Include="ConsoleUI.cs" />
