--- a/ZrnBot/ZrnBot.csproj
+++ b/ZrnBot/ZrnBot.csproj
@@ -46,8 +46,15 @@
     <Compile Include="Channel.cs" />
     <Compile Include="ConsoleUI.cs" />
     <Compile Include="InputUtils.cs" />
+    <Compile Include="IO\INetwork.cs" />
+    <Compile Include="IO\IrcMessage.cs" />
+    <Compile Include="IO\IrcNetwork.cs" />
+    <Compile Include="IO\MessageReceivedEventArgs.cs" />
+    <Compile Include="IPyScript.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test\IO\MockNetwork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
